<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contra Tools</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_escaner">Escaner</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
    <string name="_">"  "</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_registro">Registro</string>
    <string name="cancelar">Cancelar</string>
    <string name="atras">Atras</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="registrar">Registrar</string>
    <string name="empresa">Empresa</string>
    <string name="title_activity_herramientas">Herramientas</string>
    <string name="nueva">Nueva</string>
    <string name="title_activity_nueva_herramienta">Nueva Herramienta</string>
    <string name="nombre">Nombre</string>
    <string name="serial">Serial</string>
    <string name="descripci_n">Descripción</string>
    <string name="comentario">Comentario</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_empleados">Empleados</string>
    <string name="nuevo">Nuevo</string>
    <string name="title_activity_nuevo_empleado">NuevoEmpleado</string>
    <string name="cargo">Cargo</string>
    <string name="fecha_de_vinculacion">Fecha de vinculacion</string>
    <string name="documento">Documento</string>
    <string name="title_activity_informacion_empleado">Empleado</string>
    <string name="asignar_herramienta">Asignar herramienta</string>
    <string name="herramientas_asignadas">Herramientas asignadas</string>
    <string name="comentarios">Comentarios</string>
    <string name="title_activity_empleado_herramientas">Herramientas Emp</string>
    <string name="opciones">Opciones</string>
    <string name="title_activity_informacion_herramienta">Herramienta</string>
    <string name="buscar">Buscar</string>
    <string name="__">"  "</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_buscar_empleado">Buscar Empleado</string>
    <string name="title_activity_admon">Admon</string>
    <string name="cambio_de_password">Cambio de password</string>
    <string name="password_actual">Password actual</string>
    <string name="nuevo_password">Nuevo password</string>
    <string name="cambiar">Cambiar</string>
    <string name="repetir_nuevo_password">Repetir nuevo password</string>
    <string name="title_activity_proyectos">Proyectos</string>
    <string name="title_activity_nuevo_proyecto">NuevoProyecto</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="fecha_de_terminaci_n_provista">Fecha de terminación provista</string>
    <string name="lugar">Lugar</string>
    <string name="cliente">Cliente</string>
    <string name="ver_terminados">Ver Terminados</string>
    <string name="title_activity_informacion_proyecto">Proyecto</string>
    <string name="fecha_de_terminaci_n_real">Fecha de terminación real</string>
    <string name="activo">Activo</string>
    <string name="trabajadores_en_proyecto">Trabajadores en proyecto</string>
    <string name="concluir_proyecto">Concluir proyecto</string>
    <string name="title_activity_proyecto_empleado">ProyectoEmpleado</string>
    <string name="title_activity_editar_herramienta">EditarHerramienta</string>
    <string name="title_activity_editar_empleado">EditarEmpleado</string>
    <string name="title_activity_editar_proyecto">EditarProyecto</string>
    <string name="title_activity_buscar_herramienta">BuscarHerramienta</string>
    <string name="escanear_">"Escanear:  "</string>
    <string name="id">ID</string>
    <string name="retirar_herramienta">Retirar herramienta</string>
    <string name="serial_de_f_brica">Serial de fábrica</string>
    <string name="title_activity_list_item_select">List_item_select</string>
    <string name="checkbox">CheckBox</string>
    <string name="title_activity_proyecto_empleado_asignado">Empleados Proyecto</string>
    <string name="title_activity_item_adapter_select">ItemAdapterSelect</string>
    <string name="title_activity_item_select">ItemSelect</string>
    <string name="asignar_trabajadores">Asignar trabajadores</string>
    <string name="empleados_asignados_al_proyecto">Empleados asignados al proyecto</string>

</resources>