<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.eafit.contratools.InformacionHerramienta" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff005EFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff005EFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TextCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serial"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff005EFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TextDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff005EFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TextComentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff005EFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff005EFF"
            android:onClick="editar"
            android:text="@string/editar"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff005EFF"
            android:onClick="eliminar"
            android:text="@string/eliminar"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>